--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ body .magic-hover {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    font-size : 20px;
 }
 /*------------X-----------------X--------------*/
 
