--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ body .magic-hover {
     font-size: 30px;
     display: inline-block;
     cursor: pointer;
-    margin-right: 5px;
+    margin-right: 0;
 }
 .skin-content li:last-child{
     margin-right: 0;
